reflected Scott's comments

--- a/draft/abstract.tex
+++ b/draft/abstract.tex
@@ -1,30 +1,22 @@
 \begin{abstract}
  Cyber-physical systems (CPS) aim to control complex real-world
- phenomenon.
- Due to real-time constraints, however, the computational cost of
- control algorithms is becoming a major issue of CPS.
- Parallel computing of the control algorithms using state-of-the-art
- compute devices, such as graphics processing units (GPUs), is a
- promissing approach to reduce this computational cost, given that
- real-world phenomenon by nature compose data parallelism, yet another
- problem is introduced by the overhead of data transfer between the host
- processor and the compute device.
- As a matter of fact, plasma control requires an order of a few
- microseconds for the control rate, while today's systems may take an
- order of ten microseconds to copy the corresponding problem size of
- data between the host processor and the compute device, which is
- unacceptable lantecy.
- In this paper, we propose a zero-copy I/O processing scheme that
- enables sensor and actuator devices to directly transfer data to and
- from the compute device.
- The basic idea behind this scheme is to map I/O address space,
- accessible to sensor and actuator devices, to virtual memory space of
- the compute device.
- The results of experiments using the real-world plasma control system
- demonstrates that the computational cost of the plasma control
- algorithm is reduced by 33\% under our new scheme.
- We further provide the results of microbenchmarking to show that more
- generic matrix computations are completed in 34\% less time than
- current methods, using our new scheme, while effective data throughput
- remains at least as good as the current best performers.
+ phenomenon where the computational cost and real-time constraints could
+ be a major challenge.
+ Parallel computing technology using compute devices such as graphics
+ processing units (GPUs) promises to enhancing computation, leveraging
+ the data parallelism often found in real-world scenarios, but
+ performance is limited by the overhead of the data transfer between the
+ host and the device memory.
+ For example, plasma control in the HBT-EP ``Tokamak'' device at Columbia
+ University~\cite{Maurer_PPCF11,Rath_FED12} must run the control
+ algorithm in a few microseconds, but may take tens of microseconds to
+ copy the data set between the host and the device memory.
+ We present a new zero-copy I/O processing scheme that maps
+ the I/O address space of the system to the virtual address space of the
+ compute device, allowing sensor and actuator devices to transfer data
+ to and from the compute device directly. 
+ Experiments with the plasma control system show a 33\% reduction in
+ computational cost, and microbenchmarks with more generic matrix 
+ operations show a 34\% reduction, while in both cases, effective data 
+ throughput remains at least as good as the current best  performers.
 \end{abstract}
