--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -42,8 +42,8 @@
 \begin{document}
 
 \title{
-%Zero-Copy I/O Processing for Low-Latency GPU Computing
-Zero-Copy I/O for Low-Latency GPU Computing
+Zero-Copy I/O Processing for Low-Latency GPU Computing
+%Zero-Copy I/O for Low-Latency GPU Computing
 }
 %
 % You need the command \numberofauthors to handle the 'placement
@@ -116,7 +116,7 @@ Zero-Copy I/O for Low-Latency GPU Computing
 \thispagestyle{empty}
 
 \input{abstract.tex}
-\keywords{GPGPU, Zero-Copy I/O, Fusion and Plasma, CPS}
+\keywords{GPGPU; Low Latency; Fusion and Plasma; Energy CPS}
 
 \input{introduction.tex}
 \input{system_model.tex}
@@ -125,8 +125,11 @@ Zero-Copy I/O for Low-Latency GPU Computing
 \input{case_study.tex}
 \input{benchmarking.tex}
 \input{related_work.tex}
+\input{conclusion.tex}
 
 \bibliographystyle{abbrv}
+%{\footnotesize
 \bibliography{references}
+%}
 
 \end{document}
