--- a/draft/references.bib
+++ b/draft/references.bib
@@ -9,7 +9,7 @@ year = {1999}
 @inproceedings{Elliott10,
 author = {G. Elliott and J. Anderson},
 title = {{Real-Time Multiprocessor Systems with GPUs}},
-booktitle = {Proceedings of the International Confrence on Real-Time and Network Systems},
+booktitle = {Proc. of the International Confrence on Real-Time and Network Systems},
 year = {2010}
 }
 
@@ -17,13 +17,13 @@ year = {2010}
 author = {M. Hirabayashi and S. Kato and M. Edahiro and Y. Sugiyama},
 title = {{Toward GPU-accelerated traffic simulation and its real-time challenge}},
 booktitle = {Proc. of the International Workshop on Real-Time and Distributed Computing in Emerging Applications},
-year = {2012 (to appear)}
+year = {2012}
 } 
 
 @inproceedings{Kato_ATC11,
 author = {S. Kato and K. Lakshmanan and R. Rajkumar and Y. Ishikawa},
 title = {{TimeGraph: GPU Scheduling for Real-Time Multi-Tasking Environments}},
-booktitle = {Proceedings of the USENIX Annual Technical Conference},
+booktitle = {Proc. of the USENIX Annual Technical Conference},
 year = {2011}
 }
 
@@ -37,7 +37,7 @@ year = {2012},
 @inproceedings{Kato_RTAS11,
 author = {S. Kato and K. Lakshmanan and Y. Ishikawa and R. Rajkumar},
 title = {{Resource Sharing in GPU-accelerated Windowing Systems}},
-booktitle = {Proceedings of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
+booktitle = {Proc. of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
 pages = {191--200},
 year = {2011}
 }
@@ -45,7 +45,7 @@ year = {2011}
 @inproceedings{Kato_RTSS11,
 author = {S. Kato and K. Lakshmanan and A. Kumar and M. Kelkar and Y. Ishikawa and R. Rajkumar},
 title = {{RGEM: A Responsive GPGPU Execution Model for Runtime Engines}},
-booktitle = {Proceedings of the IEEE Real-Time Systems Symposium},
+booktitle = {Proc. of the IEEE Real-Time Systems Symposium},
 pages = {57--66},
 year = {2011}
 }
@@ -53,7 +53,7 @@ year = {2011}
 @inproceedings{Kim_RTSS12,
 author = {J. Kim and G. Bhatia and and R. Rajkumar},
 title = {{SAFER: System-Level Architecture for Failure Evasion in Real-Time Applications}},
-booktitle = {Proceedings of the IEEE Real-Time Systems Symposium},
+booktitle = {Proc. of the IEEE Real-Time Systems Symposium},
 year = {2012}
 }
 
@@ -110,10 +110,16 @@ booktitle = {Proc. of the ACM Symposium on Operating Systems Principles},
 year = {2011}
 }
 
-@misc{Fermi,
+@misc{NVIDIA_Fermi,
 author = {NVIDIA},
-title = {{NVIDIA's Next Generation CUDA Compute Architecture: Fermi (Whitepaper)}},
-howpublished = {\url{http://www.nvidia.com/content/PDF/fermi_white_papers/NVIDIA_Fermi_Compute_Architecture_Whitepaper.pdf}}
+title = {{NVIDIA's next generation CUDA computer architecture: Fermi}},
+year = {2009}
+}
+
+@misc{NVIDIA_Kepler,
+author = {NVIDIA},
+title = {{NVIDIA GeForce GTX 680: The fastest, most efficient GPU ever built}},
+year = {2012}
 }
 
 @misc{CUDA,
@@ -127,7 +133,7 @@ year = {2012}
 @inproceedings{Al-Kiswany08,
 author = {S. Al-Kiswany and A. Gharaibeh and E. Santos-Neto and G. Yuan and M. Ripeanu},
 title = {{StoreGPU: Exploiting Graphics Processing Units to Accelerate Distributed Storage Systems}},
-booktitle = {Proceedings of the ACM International Symposium on High Performance Distributed Computing},
+booktitle = {Proc. of the ACM International Symposium on High Performance Distributed Computing},
 pages = {165--174},
 year = {2008}
 }
@@ -135,7 +141,7 @@ year = {2008}
 @inproceedings{Bautin08,
 author = {M. Bautin and A. Dwarakinath and T. Chiueh},
 title = {{Graphics Engine Resource Management}},
-booktitle = {Proceedings of the Annual Multimedia Computing and Networking Conference},
+booktitle = {Proc. of the Annual Multimedia Computing and Networking Conference},
 year = {2008}
 }
 
@@ -148,7 +154,7 @@ howpublished = {\url{http://www.nvidia.com/}}
 @inproceedings{Chen10,
 author = {L. Chen and O. Villa and S. Krishnamoorthy and G. Gao},
 title = {{Dynamic Load Balancing on Single- and Multi-GPU Systems}},
-booktitle = {Proceedings of the IEEE International Parallel and Distributed Processing Symposium},
+booktitle = {Proc. of the IEEE International Parallel and Distributed Processing Symposium},
 year = {2010}
 }
 
@@ -204,7 +210,7 @@ year = {2012}
 @inproceedings{Gharaibeh10,
 author = {A. Gharaibeh and S. Al-Kiswany and S. Gopalakrishnan and M. Ripeanu},
 title = {{A GPU Accelerated Storage System}},
-booktitle = {Proceedings of the ACM International Symposium on High Performance Distributed Computing},
+booktitle = {Proc. of the ACM International Symposium on High Performance Distributed Computing},
 pages = {167--178},
 year = {2010}
 }
@@ -212,7 +218,7 @@ year = {2010}
 @inproceedings{Govindan91,
 author = {R. Govindan and D. Anderson},
 title = {{Scheduling and IPC Mechanisms for Continuous Media}},
-booktitle = {Proceedings of the ACM Symposium on Operating Systems Principles},
+booktitle = {Proc. of the ACM Symposium on Operating Systems Principles},
 pages = {68--80},
 year = {1991}
 }
@@ -220,7 +226,7 @@ year = {1991}
 @inproceedings{Guevara09,
 author = {M. Guevara and C. Gregg and K. Hazelwood and K. Skadron},
 title = {{Enabling Task Parallelism in the CUDA Scheduler}},
-booktitle = {Proceedings of the Workshop on Programming Models for Emerging Architectures},
+booktitle = {Proc. of the Workshop on Programming Models for Emerging Architectures},
 pages = {69--76},
 year = {2009}
 }
@@ -228,7 +234,7 @@ year = {2009}
 @inproceedings{Gupta09,
 author = {V. Gupta and A. Gavrilovska and N. Tolia and V. Talwar},
 title = {{GViM: GPU-accelerated Virtual Machines}},
-booktitle = {Proceedings of the ACM Workshop on System-level Virtualization for High Performance Computing},
+booktitle = {Proc. of the ACM Workshop on System-level Virtualization for High Performance Computing},
 pages = {17--24},
 year = {2009}
 }
@@ -236,14 +242,21 @@ year = {2009}
 @inproceedings{Gupta11,
 author = {V. Gupta and K. Schwan and N. Tolia and V. Talwar and P. Ranganathan},
 title = {{Pegasus: Coordinated Scheduling for Virtualized Accelerator-based Systems}},
-booktitle = {Proceedings of the USENIX Annual Technical Conference},
+booktitle = {Proc. of the USENIX Annual Technical Conference},
+year = {2011}
+}
+
+@inproceedings{Jablin_PLDI11,
+author = {T. Jablin and P. Prabhu and J. Jablin and N. Johnson and S. Beard and D. August},
+title = {{Automatic CPU-GPU communication management and optimization}},
+booktitle = {Proc. of the ACM Conference on Programming Language Design and Implementation},
 year = {2011}
 }
 
 @inproceedings{Kato_RTCSA08,
 author = {S. Kato and N. Yamasaki},
 title = {{Global EDF-based Scheduling with Efficient Priority Promotion}},
-booktitle = {Proceedings of the IEEE Embedded and Real-Time Computing Systems and Applications},
+booktitle = {Proc. of the IEEE Embedded and Real-Time Computing Systems and Applications},
 pages = {197--206},
 year = {2008}
 }
@@ -258,7 +271,7 @@ year = {2011}
 @inproceedings{Kato_RTSS09,
 author = {S. Kato and Y. Ishikawa},
 title = {{Gang EDF Scheduling of Parallel Task Systems}},
-booktitle = {Proceedings of the IEEE Real-Time Systems Symposium},
+booktitle = {Proc. of the IEEE Real-Time Systems Symposium},
 pages = {459--468},
 year = {2009}
 }
@@ -266,14 +279,14 @@ year = {2009}
 @inproceedings{Kim10,
 author = {C. Kim and J. Chhugani and N. Satish and E. Sedlar and A.D. Nguyen and T. Kaldewey and V.W. Lee and S.A. Brandt and P. Dubey},
 title = {{FAST: Fast Architecture Sensitive Tree Search on Modern CPUs and GPUs}},
-booktitle = {Proceedings of the 2010 ACM SIGMOD/PODS Conference},
+booktitle = {Proc. of the 2010 ACM SIGMOD/PODS Conference},
 year = {2010}
 }
 
 @inproceedings{Lagar-Cavilla07,
 author = {H.A. Lagar-Cavilla and N. Tolia and M. Satyanarayanan and E. de Lara},
 title = {{VMM-Independent Graphics Acceleration}},
-booktitle = {Proceedings of the ACM/Usenix International Conference on Virtual Execution Environments},
+booktitle = {Proc. of the ACM/Usenix International Conference on Virtual Execution Environments},
 pages = {33--43},
 year = {2007}
 }
@@ -281,7 +294,7 @@ year = {2007}
 @inproceedings{Lakshmanan_RTSS10,
 author = {K. Lakshmanan and S. Kato and R. Rajkumar},
 title = {{Scheduling Parallel Real-Time Tasks on Multi-core Processors}},
-booktitle = {Proceedings of the IEEE Real-Time Systems Symposium},
+booktitle = {Proc. of the IEEE Real-Time Systems Symposium},
 pages = {259--268},
 year = {2010}
 }
@@ -307,7 +320,7 @@ year = {1973}
 
 @misc{GPUDirect,
 author = {Mellanox},
-title = {{NVIDIA GPUDirect Technology-- Accelerating GPU-based Systems (Whitepaper)}},
+title = {{NVIDIA GPUDirect Technology-- Accelerating GPU-based Systems}},
 year = {2010}
 }
 
@@ -319,7 +332,7 @@ howpublished = "\url{http://www.mesa3d.org/}",
 @inproceedings{Michel07,
 author = {P. Michel and J. Chestnutt and S. Kagami and K. Nishiwaki and J. Kuffner and T. Kanade},
 title = {{GPU-accelerated Real-Time 3D Tracking for Humanoid Locomotion and Stair Climbing}},
-booktitle = {Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems},
+booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots and Systems},
 pages = {463--469},
 year = {2007}
 }
@@ -327,7 +340,7 @@ year = {2007}
 @inproceedings{Nightingale09,
 author = {E.B. Nightingale and O. Hodson and R. Mcllory and C. Hawblitzel and G. Hunt},
 title = {{Helios: Heterogeneous Multiprocessing with Satellite Kernels}},
-booktitle = {Proceedings of the ACM Symposium on Operating Systems Principles},
+booktitle = {Proc. of the ACM Symposium on Operating Systems Principles},
 year = {2009}
 }
 
@@ -346,7 +359,7 @@ howpublished = {\url{http://nouveau.freedesktop.org/}}
 @inproceedings{Oikawa_RTAS95,
 author = {S. Oikawa and H. Tokuda},
 title = {{Efficient Timing Management for User-Level Real-Time Threads}},
-booktitle = {Proceedings of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
+booktitle = {Proc. of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
 pages = {27--32},
 year = {1995}
 }
@@ -354,7 +367,7 @@ year = {1995}
 @inproceedings{Ousterhout82,
 author = {J.K. Ousterhout},
 title = {{Scheduling Techniques for Concurrent Systems}},
-booktitle = {Proceedings of the IEEE International Conference on Distributed Computing Systems}, 
+booktitle = {Proc. of the IEEE International Conference on Distributed Computing Systems}, 
 pages = {22-–30},
 year = {1982}
 }
@@ -381,7 +394,7 @@ howpublished = {\url{https://github.com/pathscale/pscnv/}}
 @inproceedings{Rajkumar_RTAS97,
 author = {R. Rajkumar and M. Gagliardi and L. Sha},
 title = {{The Real-Time Publisher/Subscriber Inter-Process Communication Model for Distributed Real-Time Systems: Design and Implementation}},
-booktitle = {Proceedings of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
+booktitle = {Proc. of the IEEE Real-Time and Embedded Technology and Aplications Symposium},
 pages = {66--75},
 year = {2011}
 }
@@ -389,7 +402,7 @@ year = {2011}
 @inproceedings{Saba10,
 author = {A. Saba and R. Mangharam},
 title = {{Anytime Algorithms for GPU Architectures}},
-booktitle = {Proceedings of the Analytic Virtual Integration of Cyber-Physical Systems Workshop},
+booktitle = {Proc. of the Analytic Virtual Integration of Cyber-Physical Systems Workshop},
 year = {2010}
 }
 
@@ -402,14 +415,14 @@ howpublished = {\url{http://www.intel.com/}},
 @inproceedings{Schaa09,
 author = {D. Schaa and D. Kaeli},
 title = {{Exploring the Multiple-GPU Design Space}},
-booktitle = {Proceedings of the IEEE International Parallel and Distributed Processing Symposium},
+booktitle = {Proc. of the IEEE International Parallel and Distributed Processing Symposium},
 year = {2009}
 }
 
 @inproceedings{Shimokawabe10,
 author = {T. Shimokawabe and T. Aoki and C. Muroi and J. Ishida and K. Kawano and T> Endo and A. Nukada and N. Maruyama and S. Matsuoka},
 title = {{An 80-Fold Speedup, 15.0 TFlops, Full GPU Acceleration of Non-Hydrostatic Weather Model ASUCA Production Code}},
-booktitle = {Proceedings of the ACM/IEEE International Conference on High Performance Computing, Networking, Storage and Analysis},
+booktitle = {Proc. of the ACM/IEEE International Conference on High Performance Computing, Networking, Storage and Analysis},
 year = {2010}
 }
 
@@ -439,7 +452,7 @@ year = {2008}
 @inproceedings{Yang08,
 author = {T. Yang and T. Liu and E.D. Berger and S.F. Kaplan and J.E-B. Moss},
 title = {{Redline: First Class Support for Interactivity in Commodity Operating Systems}},
-booktitle = {Proceedings of the USENIX Symposium on Operating Systems Design and Implementation},
+booktitle = {Proc. of the USENIX Symposium on Operating Systems Design and Implementation},
 pages = {73--86},
 year = {2008}
 }
